# MIE-2024

./: .gitignore  LICENSE  README.md  TODO.txt  do_program3.py  pyproject.toml  requirements.txt  testy  user_input.py
mie_2024/: do_filter.py  do_prediction.py  do_synthesis.py  testy.py  user_end.py  user_input.py
mie_2024/descriptives/: flowchart_11042024.drawio  p1.drawio  p3.drawio
mie_2024/flowcharts/: flowchart_11042024.drawio  p2.drawio  p3.drawio
mie_2024/programs/: do_guide.py  do_program1.py  testy.py  user_input.py
mie_2024/scripts/: do_filter.py  do_prediction.py  do_synthesis.py  user_input.py
mie_2024_outputs/synthesis/: reductase_test2---2024-10-16_15.02.p1---2024-10-16_15.09.p2---2024-11-14_17.00.p3.csv  reductase_test2---2024-10-16_15.02.p1---2024-10-16_15.09.p2---2024-11-14_17.02.p3.csv  reductase_test2---2024-11-13_17.09.p3.csv  reductase_test2---2024-11-13_17.20.p3.csv
programs/: do_program1.py  do_program3.py
src/: __init__.py  do_program2.py
src/MIE_2024/: do_filter.py  do_prediction.py  do_synthesis.py  user_end.py
